--- a/Mealmate.Admin/Views/Auth/SignIn.cshtml
+++ b/Mealmate.Admin/Views/Auth/SignIn.cshtml
@@ -1,69 +1,52 @@
-﻿
+﻿@model SignInViewModel
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_AuthLayout.cshtml";
+    ViewBag.Title = "Sign In";
 }
-<html lang="en">
-<!--begin::Head-->
-<head>
-    
-</head>
-<!--end::Head-->
-<!--begin::Body-->
-<body id="kt_body" style="background-image: url(assets/media/bg/bg-10.jpg)" class="quick-panel-right demo-panel-right offcanvas-right header-fixed subheader-enabled page-loading">
-    <!--begin::Main-->
-    <div class="d-flex flex-column flex-root">
-        <!--begin::Login-->
-        <div class="login login-signin-on login-3 d-flex flex-row-fluid" id="kt_login">
-            <div class="d-flex flex-center flex-row-fluid bgi-size-cover bgi-position-top bgi-no-repeat" style="background-image: url(assets/media/bg/bg-3.jpg);">
-                <div class="login-form text-center p-7 position-relative overflow-hidden">
-                    <!--begin::Login Header-->
-                    <div class="d-flex flex-center mb-15">
-                        <a href="#">
-                            <img src="assets/media/logos/logo-letter-13.png" class="max-h-75px" alt="" />
-                        </a>
-                    </div>
-                    <!--end::Login Header-->
-                    <!--begin::Login Sign in form-->
-                    <div class="login-signin">
-                        <div class="mb-20">
-                            <h3>Sign In To Admin</h3>
-                            <div class="text-muted font-weight-bold">Enter your details to login to your account:</div>
-                        </div>
-                        <form class="form" method="post" asp-controller="Auth" asp-action="SignIn">
-                            <div class="form-group mb-5">
-                                <input class="form-control h-auto form-control-solid py-4 px-8" type="text" placeholder="Email" name="username" autocomplete="off" />
-                            </div>
-                            <div class="form-group mb-5">
-                                <input class="form-control h-auto form-control-solid py-4 px-8" type="password" placeholder="Password" name="password" />
-                            </div>
-                            <div class="form-group d-flex flex-wrap justify-content-between align-items-center">
-                                <label class="checkbox m-0 text-muted">
-                                    <input type="checkbox" name="remember" />Remember me
-                                    <span></span>
-                                </label>
-                                @*<a href="javascript:;" id="kt_login_forgot" class="text-muted text-hover-primary">Forget Password ?</a>*@
-                            </div>
-                            <button type="submit"
-                                    class="btn btn-primary font-weight-bold px-9 py-4 my-3 mx-4">
-                                Sign In
-                            </button>
-                        </form>
-                    </div>
 
-                </div>
+
+<!--begin::Login-->
+<div class="login login-signin-on login-3 d-flex flex-row-fluid" id="kt_login">
+    <div class="d-flex flex-center flex-row-fluid bgi-size-cover bgi-position-top bgi-no-repeat" style="background-image: url(assets/media/bg/bg-3.jpg);">
+        <div class="login-form text-center p-7 position-relative overflow-hidden">
+            <!--begin::Login Header-->
+            <div class="d-flex flex-center mb-15">
+                <a href="#">
+                    <img src="~/assets/media/logos/logo-letter-13.png" class="max-h-75px" alt="" />
+                </a>
             </div>
+            <!--end::Login Header-->
+            <!--begin::Login Sign in form-->
+            <div class="login-signin">
+                <div class="mb-20">
+                    <h3>Sign In To Admin</h3>
+                    <div class="text-muted font-weight-bold">Enter your details to login to your account:</div>
+                </div>
+                <form class="form" method="post" asp-controller="Auth" asp-action="SignIn">
+                    <div class="form-group mb-5">
+                        <input class="form-control h-auto form-control-solid py-4 px-8"
+                               type="text" placeholder="Email"
+                               asp-for="Username" autocomplete="off" />
+                    </div>
+                    <div class="form-group mb-5">
+                        <input class="form-control h-auto form-control-solid py-4 px-8"
+                               type="password" placeholder="Password" asp-for="Password" />
+                    </div>
+                    <div class="form-group d-flex flex-wrap justify-content-between align-items-center">
+                        <label class="checkbox m-0 text-muted">
+                            <input type="checkbox" asp-for="Remember" />Remember me
+                            <span></span>
+                        </label>
+                        @*<a href="javascript:;" id="kt_login_forgot" class="text-muted text-hover-primary">Forget Password ?</a>*@
+                    </div>
+                    <button type="submit"
+                            class="btn btn-primary font-weight-bold px-9 py-4 my-3 mx-4">
+                        Sign In
+                    </button>
+                </form>
+            </div>
+
         </div>
-        <!--end::Login-->
     </div>
-    <!--end::Main-->
-    <!--begin::Global Config(global config for global JS scripts)-->
-    <script>var KTAppSettings = { "breakpoints": { "sm": 576, "md": 768, "lg": 992, "xl": 1200, "xxl": 1200 }, "colors": { "theme": { "base": { "white": "#ffffff", "primary": "#6993FF", "secondary": "#E5EAEE", "success": "#1BC5BD", "info": "#8950FC", "warning": "#FFA800", "danger": "#F64E60", "light": "#F3F6F9", "dark": "#212121" }, "light": { "white": "#ffffff", "primary": "#E1E9FF", "secondary": "#ECF0F3", "success": "#C9F7F5", "info": "#EEE5FF", "warning": "#FFF4DE", "danger": "#FFE2E5", "light": "#F3F6F9", "dark": "#D6D6E0" }, "inverse": { "white": "#ffffff", "primary": "#ffffff", "secondary": "#212121", "success": "#ffffff", "info": "#ffffff", "warning": "#ffffff", "danger": "#ffffff", "light": "#464E5F", "dark": "#ffffff" } }, "gray": { "gray-100": "#F3F6F9", "gray-200": "#ECF0F3", "gray-300": "#E5EAEE", "gray-400": "#D6D6E0", "gray-500": "#B5B5C3", "gray-600": "#80808F", "gray-700": "#464E5F", "gray-800": "#1B283F", "gray-900": "#212121" } }, "font-family": "Poppins" };</script>
-    <!--end::Global Config-->
-    <!--begin::Global Theme Bundle(used by all pages)-->
-    <script src="assets/plugins/global/plugins.bundle.js"></script>
-    <script src="assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
-    <script src="assets/js/scripts.bundle.js"></script>
-    <!--end::Global Theme Bundle-->
-</body>
-<!--end::Body-->
-</html>
+</div>
+<!--end::Login-->
