1. Home page 2. Admin area
Related Work Items: #33

--- a/Mealmate.Admin/Areas/Admin/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Home/Index.cshtml
@@ -12,22 +12,25 @@
                 <!--begin::Heading-->
                 <div class="d-flex flex-column">
                     <!--begin::Title-->
-                    <h2 class="text-white font-weight-bold my-2 mr-5">Dashboard</h2>
+                    <h2 class="text-white font-weight-bold my-2 mr-5">Administration</h2>
                     <!--end::Title-->
                     <!--begin::Breadcrumb-->
                     <div class="d-flex align-items-center font-weight-bold my-2">
                         <!--begin::Item-->
-                        <a href="#" class="opacity-75 hover-opacity-100">
+                        <a asp-area="" asp-controller="Home" asp-action="Index"
+                           class="opacity-75 hover-opacity-100">
                             <i class="flaticon2-shelter text-white icon-1x"></i>
                         </a>
                         <!--end::Item-->
                         <!--begin::Item-->
                         <span class="label label-dot label-sm bg-white opacity-75 mx-3"></span>
-                        <a href="" class="text-white text-hover-white opacity-75 hover-opacity-100">Dashboard</a>
+                        <a asp-area="" asp-controller="Home" asp-action="Index"
+                           class="text-white text-hover-white opacity-75 hover-opacity-100">Dashboard</a>
                         <!--end::Item-->
                         <!--begin::Item-->
                         <span class="label label-dot label-sm bg-white opacity-75 mx-3"></span>
-                        <a href="" class="text-white text-hover-white opacity-75 hover-opacity-100">Latest Updated</a>
+                        <a asp-area="Admin" asp-controller="Home" asp-action="Index"
+                           class="text-white text-hover-white opacity-75 hover-opacity-100">Administration</a>
                         <!--end::Item-->
                     </div>
                     <!--end::Breadcrumb-->
@@ -134,10 +137,11 @@
 </div>
 <!--end::Content-->
 
+
 @section Scripts{
     <script>
         $(function () {
-            $("ul.menu-nav li:eq(0)").addClass("menu-item-active");
+            $("ul.menu-nav li:eq(1)").addClass("menu-item-active");
         })
     </script>
 }
