--- a/Mealmate.Admin/Areas/Admin/Views/Shared/Components/UserList/Default.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Shared/Components/UserList/Default.cshtml
@@ -4,47 +4,69 @@
 }
 
 
-@if (Model != null)
-{
-    <table class="datatable datatable-bordered datatable-head-custom" id="kt_datatable">
-        <thead>
+<table class="table table-responsive-lg table-checkable" id="kt_datatable">
+    <thead>
+        <tr>
+            <th title="Field #1">Name</th>
+            <th title="Field #2">Username</th>
+            <th title="Field #3">Email</th>
+            <th title="Field #4">Phone</th>
+            <th title="Field #7">Status</th>
+            <th title="Field #8">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            var StateBadge = item.StateId == 1 ? "success" : "danger";
+            var State = item.StateId == 1 ? "Active" : "Passive";
+
+            var Role = item.StateId == 1 ? "Active" : "Passive";
             <tr>
-                <th title="Field #1">Name</th>
-                <th title="Field #2">Username</th>
-                <th title="Field #3">Email</th>
-                <th title="Field #4">Phone</th>
-                <th title="Field #7">Status</th>
-                <th title="Field #8">Role</th>
+                <td>
+                    @item.Name
+                </td>
+                <td>
+                    @item.Username
+                </td>
+                <td>
+                    @item.Email
+                </td>
+                <td>
+                    @item.Phone
+                </td>
+                <td>
+                    <span class="label label-lg font-weight-bold label-light-@StateBadge label-inline">
+                        @State
+                    </span>
+                </td>
+                <td>
+                    <a asp-area="Admin" asp-controller="User" asp-action="Update"
+                       asp-route-id="@item.AppUserId"
+                       class="btn btn-sm btn-clean btn-icon btn-icon-md js-update" title="Edit">
+                        <i class="fa fa-pencil-alt"></i>
+                    </a>
+
+                    @if (item.StateId == 1)
+                    {
+                        <a asp-area="Admin" asp-controller="User" asp-action="Toggle"
+                           data-id="@item.AppUserId"
+                           class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
+                           title="Set passive">
+                            <i class="fa fa-thumbs-down text-danger"></i>
+                        </a>
+                    }
+                    else
+                    {
+                        <a asp-area="Admin" asp-controller="User" asp-action="Toggle"
+                           data-id="@item.AppUserId"
+                           class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
+                           title="Set active">
+                            <i class="fa fa-thumbs-up text-success"></i>
+                        </a>
+                    }
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @item.Username
-                    </td>
-                    <td>
-                        @item.Email
-                    </td>
-                    <td>
-                        @item.Phone
-                    </td>
-                    <td>
-                        
-                    </td>
-                    <td>
-
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-
-}
+        }
+    </tbody>
+</table>
