--- a/Mealmate.Admin/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--begin::Layout Themes(used by all pages)-->
     <!--end::Layout Themes-->
     <link rel="shortcut icon" href="~/assets/media/logos/favicon.ico" />
+    <link href="~/css/mines.css" rel="stylesheet" />
 
     @RenderSection("Styles", required: false)
 
@@ -273,7 +274,8 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg">
                                     <form>
                                         <!--begin::Header-->
-                                        <div class="d-flex flex-column pt-12 bgi-size-cover bgi-no-repeat rounded-top" style="background-image: url(assets/media/misc/bg-1.jpg)">
+                                        <div class="d-flex flex-column pt-12 bgi-size-cover bgi-no-repeat rounded-top" 
+                                             style="background-image: url(assets/media/bg/bg-1.jpg)">
                                             <!--begin::Title-->
                                             <h4 class="d-flex flex-center rounded-top">
                                                 <span class="text-white">User Notifications</span>
@@ -728,7 +730,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <!--begin::Dropdown-->
                                 <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg">
                                     <!--begin:Header-->
-                                    <div class="d-flex flex-column flex-center py-10 bgi-size-cover bgi-no-repeat rounded-top" style="background-image: url(assets/media/misc/bg-1.jpg)">
+                                    <div class="d-flex flex-column flex-center py-10 bgi-size-cover bgi-no-repeat rounded-top" style="background-image: url(assets/media/bg/bg-1.jpg)">
                                         <h4 class="text-white font-weight-bold">Quick Actions</h4>
                                         <span class="btn btn-success btn-sm font-weight-bold font-size-sm mt-2">23 tasks pending</span>
                                     </div>
@@ -840,7 +842,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-xl dropdown-menu-anim-up">
                                     <form>
                                         <!--begin::Header-->
-                                        <div class="d-flex align-items-center py-10 px-8 bgi-size-cover bgi-no-repeat rounded-top" style="background-image: url(assets/media/misc/bg-1.jpg)">
+                                        <div class="d-flex align-items-center py-10 px-8 bgi-size-cover bgi-no-repeat rounded-top" style="background-image: url(assets/media/bg/bg-1.jpg)">
                                             <span class="btn btn-md btn-icon bg-white-o-15 mr-4">
                                                 <i class="flaticon2-shopping-cart-1 text-success"></i>
                                             </span>
@@ -2350,6 +2352,16 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--begin::Page Scripts(used by this page)-->
     <script src="~/assets/js/pages/widgets.js"></script>
     <!--end::Page Scripts-->
+
+    <script>
+        $(function () {
+            $(document).bind('ajaxStart', function () {
+                $("body").addClass('loading');
+            }).bind('ajaxStop', function () {
+                $("body").removeClass('loading');
+            });
+        });
+    </script>
 
     @RenderSection("Scripts", required: false)
 
