--- a/Mealmate.Admin/Areas/Admin/Views/AppUser/Update.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/AppUser/Update.cshtml
@@ -1,25 +1,26 @@
-﻿@model UserCreateViewModel
+﻿@model UserUpdateViewModel
 @{
     Layout = null;
 }
 
 
-<div class="modal fade" id="create-user" tabindex="-1" role="dialog">
+<div class="modal fade" id="update-user" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">
-                    Create User
+                    Update User
                 </h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <i aria-hidden="true" class="ki ki-close"></i>
                 </button>
             </div>
             <div class="modal-body">
-                <form asp-area="Admin" asp-controller="AppUser" asp-action="Create"
+                <form asp-area="Admin" asp-controller="AppUser" asp-action="Update"
                       method="post" autocomplete="off">
                     <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
                     @Html.AntiForgeryToken()
+                    @Html.HiddenFor(model=>model.AppUserId)
                     <div class="row form-group">
                         <div class="col-md-12">
                             <label class="col-form-label">Name</label>
