Front Desk Completed
Related Work Items: #33

--- a/Mealmate.Admin/Views/Shared/_Layout.cshtml
+++ b/Mealmate.Admin/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--begin::Header Mobile-->
     <div id="kt_header_mobile" class="header-mobile">
         <!--begin::Logo-->
-        <a href="index.html">
+        <a asp-controller="HOME" asp-action="Index">
             <img alt="Logo" src="~/assets/media/logos/logo-letter-1.png" class="logo-default max-h-30px" />
         </a>
         <!--end::Logo-->
@@ -82,7 +82,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <div class="d-flex align-items-stretch mr-3">
                             <!--begin::Header Logo-->
                             <div class="header-logo">
-                                <a href="index.html">
+                                <a asp-controller="HOME" asp-action="Index">
                                     <img alt="Logo" src="~/assets/media/logos/logo-letter-9.png" class="logo-default max-h-40px" />
                                     <img alt="Logo" src="~/assets/media/logos/logo-letter-1.png" class="logo-sticky max-h-40px" />
                                 </a>
