colorized queue dashboard
Related Work Items: #33

--- a/Mealmate.Admin/Views/Home/Index.cshtml
+++ b/Mealmate.Admin/Views/Home/Index.cshtml
@@ -127,9 +127,9 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="card card-custom">
-                        <div class="card-header card-header-tabs-line">
+                        <div class="card-header card-header-tabs-line bg-secondary">
                             <div class="card-title">
-                                <h3 class="card-label">Queue Managment</h3>
+                                <h3 class="card-label h3">Queue Managment</h3>
                             </div>
                             <div class="card-toolbar">
                                 <ul class="nav nav-tabs nav-bold nav-tabs-line">
@@ -154,12 +154,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body bg-light">
                             <div class="tab-content">
                                 <div class="tab-pane fade show active" id="order_tab" role="tabpanel" aria-labelledby="order_tab" style="min-height: 400px">
                                     <div class="col-xl-4 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">New Orders</h5>
-                                        <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-primary rounded ">New Orders</h5>
+                                        <div class="scroll scroll-pull" data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
 
@@ -660,7 +660,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-4 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">Under Process</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-warning rounded">Under Process</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
@@ -729,7 +729,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-4 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">Delivered</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-success rounded">Delivered</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
@@ -797,7 +797,7 @@
                                 <div class="tab-pane fade" id="bill_tab" role="tabpanel" aria-labelledby="bill_tab" style="min-height: 400px">
 
                                     <div class="col-xl-4 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">New Request</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-primary rounded">New Request</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
@@ -1238,7 +1238,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-4 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">Generated Bills</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-warning rounded">Generated Bills</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
@@ -1307,7 +1307,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-4 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">Payed Bills</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-success rounded">Payed Bills</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
@@ -1368,7 +1368,7 @@
                                 </div>
                                 <div class="tab-pane fade" id="restroom_tab" role="tabpanel" aria-labelledby="restroom_tab" style="min-height: 400px">
                                     <div class="col-xl-6 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">New Request</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-primary rounded">New Request</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
@@ -1437,7 +1437,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-6 float-left">
-                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-white rounded">Acknowledged</h5>
+                                        <h5 class="d-flex justify-content-center shadow-sm p-3 mb-5 bg-success rounded">Acknowledged</h5>
                                         <div class="scroll scroll-pull " data-scroll="true" style="height: 400px">
 
                                             <div class="card card-custom card-collapsed" data-card="true">
